[son] big update: generator

--- a/internals/generators/component/component.tsx.hbs
+++ b/internals/generators/component/component.tsx.hbs
@@ -1,12 +1,10 @@
 /*
  * {{properCase name}}
  */
- 
-interface Props {
 
-}
+import { {{properCase name}}Props } from './types'
 
-const {{properCase name}} = (props: Props) => {
+const {{properCase name}} = (props: {{properCase name}}Props) => {
   return <div></div>
 }
 
