--- a/internals/generators/component/index.ts.hbs
+++ b/internals/generators/component/index.ts.hbs
@@ -1,3 +1,2 @@
-import {{properCase name}} from './{{properCase name}}'
-
-export default {{properCase name}};
+export { default } from './{{properCase name}}';
+export * from './types';
