[son] add: maproutes

--- a/internals/generators/component/component.tsx.hbs
+++ b/internals/generators/component/component.tsx.hbs
@@ -5,6 +5,9 @@
 import { {{properCase name}}Props } from './types'
 
 const {{properCase name}} = (props: {{properCase name}}Props) => {
+
+  const {} = props;
+
   return <div></div>
 }
 
